# ChangeLog for app-i18n/anthy
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/ChangeLog,v 1.9 2003/10/30 15:22:25 usata Exp $

*anthy-4700 (31 Oct 2003)

  31 Oct 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4300b.ebuild,
  anthy-4700.ebuild:
  New upstream release. Added ~alpha keyword.

  26 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4507.ebuild,
  anthy-4515.ebuild, anthy-4519.ebuild:
  Moved snapshots to app-i18n/anthy-ss

*anthy-4519 (22 Sep 2003)

  22 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4519.ebuild:
  Version bumped. Thanks to Hattya <hattya@inter7.jp> for reporting
  the new release. This closes Bug #29190.

  22 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4300b.ebuild,
  anthy-4507.ebuild, anthy-4515.ebuild:
  Utilised elisp-common.eclass

*anthy-4515 (15 Sep 2003)

  15 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4515.ebuild:
  Version bumped

*anthy-4507 (11 Sep 2003)

  13 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4507.ebuild:
  Added to DEPEND >=app-dicts/canna-cannadict-0.95-r1, which installs
  gcanna{,f}.ctd and don't require canna if USE="-canna". Thanks to
  Hattya <hattya@inter7.jp> for reporting the bug in Bug #28530

  11 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4507.ebuild:
  New snapshot branch.  Ebuild submitted by Hattya <hattya@inter7.jp>
  in Bug #28361.  Now it merges other canna dictionaries into main
  Anthy dictionary during installation.

*anthy-4300b (20 Aug 2003)

  05 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4300b.ebuild,
  files/50anthy-gentoo.el:
  Modified 50anthy-gentoo.el to activate anthy.el when you press C-\
  (It wasn't activated by default if you had (set-language-environment
  "Japanese") in your ${HOME}/.emacs).  Marked as stable.

  25 Aug 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4300b.ebuild:
  Removed undesired emacs dependency when USE="-emacs".  Thanks to