@@ -1,7 +1,7 @@
-MD5 f27981626cf9d2e7c72dd56153c99c92 anthy-4300b.ebuild 978
+MD5 841eebbf41a57ab7900b5de04019e524 anthy-4300b.ebuild 976
 MD5 65ba669c399cf14ce56239f65d6e86ca metadata.xml 631
-MD5 3622451d5d76066c15564ccfafaf646e ChangeLog 2290
-MD5 0f4069536d3dc472d74f16068f22c44b anthy-4700.ebuild 978
+MD5 816a686e229c4f25d455629396b081d4 ChangeLog 2401
+MD5 5643fff6b938d4f0074c89f7da56ac73 anthy-4700.ebuild 975
 MD5 83e271d277525e627be3756f01c7010e files/digest-anthy-4300b 64
 MD5 d91fcb424ec63b588900d2d88a8bcee2 files/50anthy-gentoo.el 99
 MD5 18278f8fc1cafd5d0c0047982c68142f files/digest-anthy-4700 63
