@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/Attic/anthy-4700.ebuild,v 1.1 2003/10/30 15:22:25 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/Attic/anthy-4700.ebuild,v 1.2 2003/11/24 15:02:38 usata Exp $
 
 inherit elisp-common
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://anthy.sourceforge.jp/"
 SRC_URI="mirror://sourceforge.jp/anthy/6621/${P}.tar.gz"
 
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~alpha ~sparc"
+KEYWORDS="x86 alpha sparc"
 SLOT="0"
 
 S="${WORKDIR}/${P}"
