@@ -1,8 +1,12 @@
 # ChangeLog for app-i18n/anthy
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/ChangeLog,v 1.9 2003/10/30 15:22:25 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/ChangeLog,v 1.10 2003/11/24 15:02:38 usata Exp $
 
 *anthy-4700 (31 Oct 2003)
+
+  24 Nov 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4300b.ebuild,
+  anthy-4700.ebuild:
+  Marked as stable
 
   31 Oct 2003; Mamoru KOMACHI <usata@gentoo.org> anthy-4300b.ebuild,
   anthy-4700.ebuild:
